# co-CiNii-net

./: .gitignore  LICENCE  README.md  pyproject.toml  sample.py  sample_1_generate.py  sample_3_clustering.py  sample_compose.py
core/: base.py  cociniinet.py  core.py  nayose.py  network.py  parse_cinii.py
debug/: takumi500.py
utils/: graph.py  graph_utils.py
visualize/: visualize.kt
visualizer/: .gitignore  README.md
visualizer/src/main/kotlin/: Main.kt
